jpro, and fixed visualizer freeze bug